Sending data to Azure Service Bus

--- a/src/WisdomPetMedicine.Pet.Api/appsettings.json
+++ b/src/WisdomPetMedicine.Pet.Api/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Pet": "Data Source=.;Initial Catalog=Pet;Integrated Security=true;"
+  },
+  "ServiceBus": {
+    "ConnectionString": "",
+    "Adoption": {
+      "TopicName": "pet-flagged-for-adoption"
+    }
   }
 }
