--- a/src/WisdomPetMedicine.Rescue.Api/appsettings.json
+++ b/src/WisdomPetMedicine.Rescue.Api/appsettings.json
@@ -8,6 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Rescue": "Data Source=localhost\\sqlexpress;Initial Catalog=Rescue;Integrated Security=true;"
+    "Rescue": "Data Source=.;Initial Catalog=Rescue;Integrated Security=true;"
+  },
+  "ServiceBus": {
+    "ConnectionString": "",
+    "TopicName": "pet-flagged-for-adoption",
+    "SubscriptionName": "pet-flagged-for-adoption"
   }
 }
