added second service bus communication

--- a/src/WisdomPetMedicine.Hospital.Api/appsettings.json
+++ b/src/WisdomPetMedicine.Hospital.Api/appsettings.json
@@ -8,6 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hospital": "Data Source=localhost\\sqlexpress;Initial Catalog=Hospital;Integrated Security=true;"
+    "Hospital": "Data Source=.;Initial Catalog=Hospital;Integrated Security=true;"
+  },
+  "ServiceBus": {
+    "ConnectionString": "",
+    "TopicName": "pet-transferred-to-hospital",
+    "SubscriptionName": "pet-transferred-to-hospital"
   }
 }
