--- a/src/WisdomPetMedicine.Pet.Api/appsettings.json
+++ b/src/WisdomPetMedicine.Pet.Api/appsettings.json
@@ -14,6 +14,9 @@
     "ConnectionString": "",
     "Adoption": {
       "TopicName": "pet-flagged-for-adoption"
+    },
+    "Transfer": {
+      "TopicName": "pet-transferred-to-hospital"
     }
   }
 }
