added event sourcing for azure cosmos

--- a/src/WisdomPetMedicine.Hospital.Api/WisdomPetMedicine.Hospital.Api.csproj
+++ b/src/WisdomPetMedicine.Hospital.Api/WisdomPetMedicine.Hospital.Api.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\WisdomPetMedicine.Hospital.Infrastructure\WisdomPetMedicine.Hospital.Infrastructure.csproj" />
     <ProjectReference Include="..\WisdomPetMedicine.Hospital.Domain\WisdomPetMedicine.Hospital.Domain.csproj" />
   </ItemGroup>
 
