--- a/src/WisdomPetMedicine.Hospital.Api/appsettings.json
+++ b/src/WisdomPetMedicine.Hospital.Api/appsettings.json
@@ -14,5 +14,10 @@
     "ConnectionString": "",
     "TopicName": "pet-transferred-to-hospital",
     "SubscriptionName": "pet-transferred-to-hospital"
+  },
+  "CosmosDb": {
+    "ConnectionString": "",
+    "DatabaseId": "WisdomPetMedicine",
+    "ContainerId": "Patients"
   }
 }
