--- a/src/WisdomPetMedicine.Hospital.Api/WisdomPetMedicine.Hospital.Api.csproj
+++ b/src/WisdomPetMedicine.Hospital.Api/WisdomPetMedicine.Hospital.Api.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\WisdomPetMedicine.Hospital.Infrastructure\WisdomPetMedicine.Hospital.Infrastructure.csproj" />
     <ProjectReference Include="..\WisdomPetMedicine.Hospital.Domain\WisdomPetMedicine.Hospital.Domain.csproj" />
+    <ProjectReference Include="..\WisdomPetMedicine.Hospital.Infrastructure\WisdomPetMedicine.Hospital.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
