--- a/src/WisdomPetMedicine.Hospital.Api/WisdomPetMedicine.Hospital.Api.csproj
+++ b/src/WisdomPetMedicine.Hospital.Api/WisdomPetMedicine.Hospital.Api.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.8.1" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
   </ItemGroup>
