--- a/src/WisdomPetMedicine.Pet.Api/WisdomPetMedicine.Pet.Api.csproj
+++ b/src/WisdomPetMedicine.Pet.Api/WisdomPetMedicine.Pet.Api.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.8.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
